--- a/gb/22/2/22/n13596230.md
+++ b/gb/22/2/22/n13596230.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lvbxvh3485/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lvbxvh3485/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lvbxvh3485/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lvbxvh3485/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lvbxvh3485/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>防疫旅馆导入工研院零穿戴科技 打造智慧防疫</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/02/id13596232-541903-600x400.jpg" />
 <h6>工研院携手新竹迎曦饭店、堤麦公司举办零穿戴智慧科技应用于防疫旅馆之三方合作启动仪式。（左起：迎曦饭店董事长特助黄俊杰、工研院服科中心副执行长张传育、堤麦策略行销公司总经理黄琼瑢）（工研院提供）
 </h6>
 <hr>
-<p>【大纪元2022年02月22日讯】（大纪元记者林倩玉台湾新竹报导）有鉴于各国边境逐步解封，入住<ahref="https://github.com/lvbxvh3485/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB%E6%97%85%E9%A6%86.md#1">防疫旅馆</a>或<ahref="https://github.com/lvbxvh3485/djy/blob/master/gb/tag/%E9%9B%86%E4%B8%AD%E6%A3%80%E7%96%AB%E6%89%80.md#1">集中检疫所</a>需求将大幅增加，为减轻照护及饭店人员的压力，<ahref="https://github.com/lvbxvh3485/djy/blob/master/gb/tag/%E5%B7%A5%E7%A0%94%E9%99%A2.md#1">工研院</a>今（22）日携手新竹迎曦饭店、堤麦公司举办三方合作启动仪式，宣布在防疫旅馆内导入工研院研发的“<ahref="https://github.com/lvbxvh3485/djy/blob/master/gb/tag/%E9%9B%86%E4%B8%AD%E6%A3%80%E7%96%AB%E6%89%80.md#1">集中检疫所</a>自主生理侦测与连续通报服务系统”，让护理人员透过零穿戴创新科技的侦测，远端监控隔离者的生理数据，一旦异常便进行通报，不仅降低医护与患者间的感染风险，也维护饭店与医护人员安全。</p>
-<p><ahref="https://github.com/lvbxvh3485/djy/blob/master/gb/tag/%E5%B7%A5%E7%A0%94%E9%99%A2.md#1">工研院</a>服科中心副执行长张传育表示，由经济部技术处提供研究经费支持工研院开发的“集中检疫所自主生理侦测与连续通报服务系统”，是一个零接触的生理监测系统，透过“微型生理感测雷达技术”侦测受测者的呼吸、心跳。目前布建在迎曦饭店做场域验证，是竹市在地业者导入零穿戴科技的应用首例，也为新竹科技城建立<ahref="https://github.com/lvbxvh3485/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB%E6%97%85%E9%A6%86.md#1">防疫旅馆</a>科技化管理示范点。此技术未来将吸引更多业者加入科技防疫的行列，为我国打造安全网第一道防线。这套系统未来也将推广至长照机构，照护银发族健康。</p>
+<p>【大纪元2022年02月22日讯】（大纪元记者林倩玉台湾新竹报导）有鉴于各国边境逐步解封，入住<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB%E6%97%85%E9%A6%86.md#1">防疫旅馆</a>或<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9B%86%E4%B8%AD%E6%A3%80%E7%96%AB%E6%89%80.md#1">集中检疫所</a>需求将大幅增加，为减轻照护及饭店人员的压力，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%A5%E7%A0%94%E9%99%A2.md#1">工研院</a>今（22）日携手新竹迎曦饭店、堤麦公司举办三方合作启动仪式，宣布在防疫旅馆内导入工研院研发的“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9B%86%E4%B8%AD%E6%A3%80%E7%96%AB%E6%89%80.md#1">集中检疫所</a>自主生理侦测与连续通报服务系统”，让护理人员透过零穿戴创新科技的侦测，远端监控隔离者的生理数据，一旦异常便进行通报，不仅降低医护与患者间的感染风险，也维护饭店与医护人员安全。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%A5%E7%A0%94%E9%99%A2.md#1">工研院</a>服科中心副执行长张传育表示，由经济部技术处提供研究经费支持工研院开发的“集中检疫所自主生理侦测与连续通报服务系统”，是一个零接触的生理监测系统，透过“微型生理感测雷达技术”侦测受测者的呼吸、心跳。目前布建在迎曦饭店做场域验证，是竹市在地业者导入零穿戴科技的应用首例，也为新竹科技城建立<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%98%B2%E7%96%AB%E6%97%85%E9%A6%86.md#1">防疫旅馆</a>科技化管理示范点。此技术未来将吸引更多业者加入科技防疫的行列，为我国打造安全网第一道防线。这套系统未来也将推广至长照机构，照护银发族健康。</p>
 <figure id="13596233" aria-describedby="caption-13596233" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2022/02/id13596233-541906-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2022/02/id13596233-541906-450x338.jpg" alt="工研院研发之零穿戴感测系统能透过远端无线连续监测之功能，让入住隔离者躺在床上，不受打扰、无须穿戴装置，即可侦测心跳与呼吸与生理数据，透过WiFi装置即时传送到管理站的资讯系统或工作人员手机APP，24小时的通报服务，让饭店人员轻松掌握隔离者状态。（图为防疫旅馆情境示意）" width="500" /></a><figcaption id="caption-13596233" class="wp-caption-text">工研院研发之零穿戴感测系统能透过远端无线连续监测之功能，让入住隔离者躺在床上，不受打扰、无须穿戴装置，即可侦测心跳与呼吸与生理数据，透过WiFi装置即时传送到管理站的资讯系统或工作人员手机APP，24小时的通报服务，让饭店人员轻松掌握隔离者状态。（图为防疫旅馆情境示意）（林倩玉／大纪元）</figcaption></figure>
 <p>迎曦饭店董事长特助黄俊杰提到，在台湾面临严峻疫情当下，迎曦饭店当仁不让地加入新竹市防疫旅馆行列，工研院的“集中检疫所自主生理侦测与连续通报服务系统”在2021年就已导入迎曦饭店场域来完成服务实证，在不增加额外住宿费用下，提供更即时的服务来保障入住客人的健康，顾客的反馈非常好。防疫科技是趋势，迎曦期盼打造更智慧化、人性化的管理空间，为防疫尽一份心力。</p>
 <p>堤麦公司负责人黄琼瑢说，堤麦公司拥有十多年的产品设计、制造实力，加上丰富的产业行销经验，擅长以精准的眼光开发各类产品，当中多项产品具备台湾卫福部和美国FDA的医疗认证，此次携手工研院与迎曦饭店，未来将结合科技研发与应用场域，共同开发防疫科技产品，提供后疫情时代更多样化、普及化的医疗及照护选项。</p>
@@ -19,47 +19,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/21/11/10/n13367496.md#1">过年防疫旅馆不足 侯友宜：开放集中检疫所</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/1/11/n13496245.md#1">为防疫破口找解方  中原开发防疫旅馆自走车</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/1/14/n13504712.md#1">台今起轻症不送医 改送加强版防疫旅馆</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/1/25/n13527892.md#1">苏贞昌视察桃园龟山集中检疫所 盼施打疫苗</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/1/28/n13536145.md#1">集中检疫所台湾民众优先 境外生改住防疫旅馆</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/2/16/n13580547.md#1">台工研院携手护理之家 建构感知照顾系统</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/2/21/n13593888.md#1">时间差造成误解 屏县府：防疫旅馆全额补助</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/2/21/n13594409.md#1">走入李乔文学世界 “读剧”打动年轻世代的心</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/2/21/n13593590.md#1">公馆乡亲子特色公园 228连假启用</a></li>
-<li><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/22/2/19/n13589066.md#1">西湖客庄庆天穿 感念女娲补天恩泽</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/11/10/n13367496.md#1">过年防疫旅馆不足 侯友宜：开放集中检疫所</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/11/n13496245.md#1">为防疫破口找解方  中原开发防疫旅馆自走车</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/14/n13504712.md#1">台今起轻症不送医 改送加强版防疫旅馆</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/25/n13527892.md#1">苏贞昌视察桃园龟山集中检疫所 盼施打疫苗</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/28/n13536145.md#1">集中检疫所台湾民众优先 境外生改住防疫旅馆</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/16/n13580547.md#1">台工研院携手护理之家 建构感知照顾系统</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/21/n13593888.md#1">时间差造成误解 屏县府：防疫旅馆全额补助</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615941.md#1">徐耀昌走访铜锣窑青年创业基地 体验DIY</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/30/n10441048.md#1" target="_blank">西人学炼法轮功 生活发生深刻变化</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/3/n11428903.md#1" target="_blank">林辉：周恩来冷酷无情 亲手给荣高棠扣叛徒帽子</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/5/n3676026.md#1" target="_blank">老警察讲的笑话让人想哭</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/11/n13571299.md#1">【百年真相】160名将军被查 中共军队腐败超想像</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/8/n13563590.md#1">【百年真相】两封匿名信吓昏江青 酿特大政治案</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/10/n13567902.md#1">元宵节俗传承 汤圆为何叫“元宵”？</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/13/n13574633.md#1">“燕山雪花大如席”或是谶语？盘点巧合的亡国诗</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/12/n13572598.md#1">【未解之谜】最神秘的数字 上帝密码：1.618</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/21/n13594978.md#1">神韵交响乐团——布鲁赫《苏格兰幻想曲》</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13591324.md#1">【时事军事】中共小型潜艇视频曝光 或只为卖钱</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/7/n13561019.md#1">【思想领袖】疫情封锁 自我毁灭式的过度反应</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13592206.md#1">冬奥会再起风波 美华裔选手被禁参加闭幕式</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13591274.md#1">如何长寿？五个生活习惯逆转人体生理年龄</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/16/n13580045.md#1">中共增产歼-20 仍难以在太平洋和美F-35抗衡</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13592205.md#1">罹大肠癌挺过70次化疗 余苑绮改名求转运</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13592298.md#1">被拍到身材发福 吴奇隆秀空中一字马回应</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13592369.md#1">沈殿霞逝世14周年 郑欣宜忆与母亲温馨互动</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/21/n13595060.md#1">美脱口秀质疑谷爱凌：随部分明星向中共磕头</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/19/n13588822.md#1">Lia解除隔离 JYP娱乐告知ITZY成员现状</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13591274.md#1">如何长寿？五个生活习惯逆转人体生理年龄</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/18/n13587196.md#1">骨质疏松易致骨折 你可以这样做来预防</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/20/n13591742.md#1">研究发现：低糖饮食对你的肠道更好</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/19/n13589168.md#1">奇亚籽每天一匙抗老化、控血糖 小心别吃错</a></li>
-<li><a href="https://github.com/gzqjhw368/djy/blob/master/gb/22/2/19/n13589143.md#1">失智症有救？研究用对方法 10人中9人逆转</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lvbxvh3485/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lvbxvh3485/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/22/n13596230.htm">防疫旅馆导入工研院零穿戴科技 打造智慧防疫</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/22/n13596230.htm">防疫旅馆导入工研院零穿戴科技 打造智慧防疫</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lvbxvh3485/djy/blob/master/gb/22/2/22/n13596230.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lvbxvh3485/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lvbxvh3485/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lvbxvh3485/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lvbxvh3485/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13596230.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
